# guia

./: Cargo.toml  LICENSE  README.md  docsets.json  install.sh
.github/workflows/: cd.yml  ci.yml
docsets/ghostty/: ghostty.1.md  ghostty.5.md
src/: add.rs  cli.rs  dirs.rs  main.rs  read.rs
