[package]
name = "guia"
license = "MIT"
edition = "2021"
version = "0.1.4"
rust-version = "1.83"
categories = ["command-line-utilities"]
authors = ["Thiago Campos <guia@thigcampos.com>"]
description = "A documentation browser for the terminal"
homepage = "https://github.com/thigcampos/guia"
repository = "https://github.com/thigcampos/guia"

[dependencies]
dirs = "5.0"
clap = "4.5"
inquire = "0.7"
walkdir = "2.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

