[package]
name = "guia"
edition = "2021"
version = "0.2.0"
rust-version = "1.83"
homepage = "https://github.com/thigcampos/guia"
repository = "https://github.com/thigcampos/guia"
authors = ["Thiago Campos <commit@thigcampos.com>"]
description = "Guia - A documentation browser for the terminal"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }

[profile.release]
lto = true 
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
